# storage/api-docs/api-docs.json
@@ -6,7 +6,7 @@
     },
     "basePath": "/",
     "paths": {
-        "/api/customer/getCars": {
+        "/api/customer/get-cars": {
             "get": {
                 "tags": [
                     "Cars"
@@ -34,16 +34,13 @@
                     "200": {
                         "description": "successful operation"
                     },
-                    "406": {
-                        "description": "not acceptable"
-                    },
                     "500": {
                         "description": "internal server error"
                     }
                 }
             }
         },
-        "/api/customer/add_customer_car": {
+        "/api/customer/add-customer-car": {
             "post": {
                 "tags": [
                     "Cars"
@@ -101,16 +98,13 @@
                     "200": {
                         "description": "successful operation"
                     },
-                    "406": {
-                        "description": "not acceptable"
-                    },
                     "500": {
                         "description": "internal server error"
                     }
                 }
             }
         },
-        "/api/customer/remove_customer_car": {
+        "/api/customer/remove-ustomer-car": {
             "post": {
                 "tags": [
                     "Cars"
@@ -154,8 +148,41 @@
                     "200": {
                         "description": "successful operation"
                     },
-                    "406": {
-                        "description": "not acceptable"
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
+        "/api/customer/get-cust-car": {
+            "get": {
+                "tags": [
+                    "Cars"
+                ],
+                "summary": "Get customer's car",
+                "operationId": "getCustCar",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "Token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "customer_id",
+                        "in": "query",
+                        "description": "Customer Id",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
                     },
                     "500": {
                         "description": "internal server error"
@@ -214,9 +241,6 @@
                     "200": {
                         "description": "successful operation"
                     },
-                    "406": {
-                        "description": "not acceptable"
-                    },
                     "500": {
                         "description": "internal server error"
                     }
@@ -253,9 +277,6 @@
                     "200": {
                         "description": "successful operation"
                     },
-                    "406": {
-                        "description": "not acceptable"
-                    },
                     "500": {
                         "description": "internal server error"
                     }
@@ -263,7 +284,7 @@
             }
         },
         "/api/customer/logout": {
-            "get": {
+            "post": {
                 "tags": [
                     "Customers"
                 ],
@@ -284,9 +305,6 @@
                 "responses": {
                     "200": {
                         "description": "successful operation"
-                    },
-                    "406": {
-                        "description": "not acceptable"
                     },
                     "500": {
                         "description": "internal server error"
@@ -316,9 +334,6 @@
                 "responses": {
                     "200": {
                         "description": "successful operation"
-                    },
-                    "406": {
-                        "description": "not acceptable"
                     },
                     "500": {
                         "description": "internal server error"
@@ -361,8 +376,83 @@
                     "200": {
                         "description": "successful operation"
                     },
-                    "406": {
-                        "description": "not acceptable"
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
+        "/api/customer/search-workshop": {
+            "post": {
+                "tags": [
+                    "Workshop"
+                ],
+                "summary": "Search Workshop",
+                "operationId": "searchByWorkshop",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "Token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "name",
+                        "in": "formData",
+                        "description": "Workshop Name",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "type",
+                        "in": "formData",
+                        "description": "Workshop Type",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "sercice_name",
+                        "in": "formData",
+                        "description": "Sercice Name",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "address_block",
+                        "in": "formData",
+                        "description": "Workshop Address Block",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "address_area",
+                        "in": "formData",
+                        "description": "Workshop Address Area",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "address_town",
+                        "in": "formData",
+                        "description": "Workshop Address Town",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "address_city",
+                        "in": "formData",
+                        "description": "Workshop Address City",
+                        "required": false,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
                     },
                     "500": {
                         "description": "internal server error"
